[gd_scene format=4 uid="uid://b6y0qb6ik0171"]

[ext_resource type="Texture2D" uid="uid://cer4jkdaih8ae" path="res://backgroud/Pixelart Grasslands/BG/bg1.png" id="1_gdqo4"]
[ext_resource type="Texture2D" uid="uid://b28lnsyp8bho4" path="res://backgroud/Pixelart Grasslands/BG/bg2.png" id="2_ek4df"]
[ext_resource type="Texture2D" uid="uid://cy1560yrklrcx" path="res://backgroud/Pixelart Grasslands/BG/bg3.png" id="3_4l1eq"]
[ext_resource type="Texture2D" uid="uid://dgb8ejt8k4isy" path="res://backgroud/Pixelart Grasslands/BG/bg4.png" id="4_elyim"]
[ext_resource type="FontFile" uid="uid://b0ai4gifom2bp" path="res://fonts/Fontzilla Comic.ttf" id="5_ae1xr"]
[ext_resource type="PackedScene" uid="uid://besyhwrkys78r" path="res://stone.tscn" id="5_ww4ad"]
[ext_resource type="PackedScene" uid="uid://bt2rfgkcbxd17" path="res://signal.tscn" id="6_ae1xr"]
[ext_resource type="PackedScene" uid="uid://2nwdt5bxj7h0" path="res://tree1.tscn" id="7_ssmlh"]
[ext_resource type="PackedScene" uid="uid://frpmq1dgusm4" path="res://wooden2.tscn" id="8_kmp6s"]
[ext_resource type="PackedScene" uid="uid://b8lbrg7bovhg8" path="res://tree2.tscn" id="9_36t35"]
[ext_resource type="Texture2D" uid="uid://dbd4wbp8t1iew" path="res://backgroud/Pixelart Grasslands/DirtTiles.png" id="10_1eua8"]
[ext_resource type="Texture2D" uid="uid://bj35rxah4uty5" path="res://backgroud/Pixelart Grasslands/GrassTiles.png" id="11_3px8b"]
[ext_resource type="Texture2D" uid="uid://ctr3mdoihwhvu" path="res://backgroud/Pixelart Grasslands/DirtBackgroundTiles.png" id="11_ek4df"]
[ext_resource type="PackedScene" uid="uid://cfk3oxqktjyok" path="res://player.tscn" id="12_8gb1h"]
[ext_resource type="AudioStream" uid="uid://das8w0xv21d3t" path="res://DK Island Swing Returns - Donkey Kong Country Returns [OST] [dmMbAaumSKk](1).mp3" id="13_vhkrb"]
[ext_resource type="PackedScene" uid="uid://vl4200beymb7" path="res://mob.tscn" id="14_hogks"]
[ext_resource type="Script" uid="uid://d01l8o7jxity5" path="res://LevelScenes/dead_zone.gd" id="15_6yrh3"]
[ext_resource type="Script" uid="uid://c17j6pdgx45vn" path="res://LevelScenes/sign_puzzle.gd" id="15_ae1xr"]
[ext_resource type="Texture2D" uid="uid://brfw7wa6agm5v" path="res://signassets/Game World Assets/objects/1.png" id="15_ssmlh"]
[ext_resource type="AudioStream" uid="uid://d1kbmt21e4fv1" path="res://Jingle (Death) - New Super Mario Bros U - Music [C93w-lyqz_Y].mp3" id="16_7kurs"]
[ext_resource type="PackedScene" uid="uid://mvmsowbouyyi" path="res://GemBlue.tscn" id="17_gdqo4"]
[ext_resource type="Texture2D" uid="uid://d025ncwbbcyiq" path="res://2d-decoration-pack/Spritesheets/Nature_props_01.png" id="19_4l1eq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ek4df"]
texture = ExtResource("11_ek4df")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_4l1eq"]
sources/0 = SubResource("TileSetAtlasSource_ek4df")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5sqtp"]
texture = ExtResource("10_1eua8")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.08705139, 8, -0.08705139, 0.08705139, 8, -0.26115417, 8, 8, 0.60936165, 8, 0.43525887, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.08705139, 8, 8, 8, 8, -8, 0.26115417, -8, 0.08705139, 8)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.26115417, 8, 8, 8, 8, -8, 0.26115417, -8, 0.26115417, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.08705139, -0.60936165, 8, -0.08705139, 8, -8, -0.08705139, -8, 0.08705139, -0.43525696)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.08705139, -4.613735, -0.26115417, 8, 8, 8, 8, -8, -0.08705139, -8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8, -8, 8, -8, 5.31015)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8, -8, 8, -0.9575672, 0.43525887, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 0.78346443, 8, 0.43525887, -8, -8, -8, -8, 8, -3.0468063, -4.613735, -3.0468063, -4.613735, -3.0468063, -4.613735)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4l1eq"]
texture = ExtResource("11_ek4df")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hejeo"]
texture = ExtResource("11_3px8b")
separation = Vector2i(1, 1)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.9575672, 3.7432194, -1.13167, 8, 8, 8, 8, -6.027942, -0.9810139, -5.983301, -1.0163658, 3.7914863, 3.0468063, 0.08705139)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.4561005, 3.2723114, -8, 8, 8, 8, 8, -6.0065613, -8, -5.996628, -8, 8, 3.0468063, 0.08705139)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.4561005, 3.2723114, -8, 8, 8, 8, 8, -6.0065613, -8, -5.996628, -8, 8, 3.0468063, 0.08705139)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -4.0219116, 8, -4.077386, -6.0189986, -8, -5.963524)

[sub_resource type="TileSet" id="TileSet_ulhx2"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5sqtp")
sources/2 = SubResource("TileSetAtlasSource_hejeo")
sources/1 = SubResource("TileSetAtlasSource_4l1eq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elyim"]
size = Vector2(13.333359, 92.222244)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bf2j0"]
size = Vector2(20, 186.11113)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ae1xr"]
radius = 6.6666565
height = 17.777771

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bim6h"]
size = Vector2(228.88889, 20)

[node name="Level2" type="Node2D" unique_id=2014724290]
position = Vector2(576, 323.99997)
scale = Vector2(3.6000004, 3.5999997)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1691591940]
layer = -1

[node name="Bg1" type="Sprite2D" parent="CanvasLayer" unique_id=1485257480]
z_index = -10
position = Vector2(576, 323.99994)
scale = Vector2(3.6000001, 3.6055543)
texture = ExtResource("1_gdqo4")

[node name="Bg2" type="Sprite2D" parent="CanvasLayer" unique_id=579759883]
z_index = -4
position = Vector2(576, 324.00012)
scale = Vector2(3.6000001, 3.5999992)
texture = ExtResource("2_ek4df")

[node name="Bg3" type="Sprite2D" parent="CanvasLayer" unique_id=939549127]
z_index = -3
position = Vector2(576, 324.00006)
scale = Vector2(3.6000001, 3.5999992)
texture = ExtResource("3_4l1eq")

[node name="Bg4" type="Sprite2D" parent="CanvasLayer" unique_id=2084840380]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(3.6000001, 3.5999994)
texture = ExtResource("4_elyim")

[node name="Sprite2D2" parent="." unique_id=1603331347 instance=ExtResource("5_ww4ad")]
position = Vector2(-62.222218, -1.111084)
scale = Vector2(1, 0.99999994)

[node name="Sprite2D2" parent="Sprite2D2" unique_id=112748775 instance=ExtResource("5_ww4ad")]
position = Vector2(833.33325, 62.222214)
scale = Vector2(1, 0.99999994)

[node name="Sprite2D" parent="." unique_id=791251754 instance=ExtResource("6_ae1xr")]
position = Vector2(-128.88889, 54.444466)

[node name="Sprite2D3" parent="." unique_id=1821869398 instance=ExtResource("7_ssmlh")]
position = Vector2(713.33325, 43.333344)
scale = Vector2(1, 0.99999994)

[node name="Sprite2D4" parent="." unique_id=808447642 instance=ExtResource("7_ssmlh")]
position = Vector2(535.55554, -70)
scale = Vector2(1, 0.99999994)

[node name="Sprite2D4" parent="Sprite2D4" unique_id=312460355 instance=ExtResource("7_ssmlh")]
position = Vector2(-571.1111, 48.888893)
scale = Vector2(1, 0.99999994)

[node name="Sprite2D5" parent="." unique_id=377327333 instance=ExtResource("8_kmp6s")]
position = Vector2(-31.1111, 63.333344)

[node name="Sprite2D5" parent="Sprite2D5" unique_id=1257126155 instance=ExtResource("8_kmp6s")]
position = Vector2(257.77774, -33.333344)

[node name="Sprite2D6" parent="Sprite2D5" unique_id=1519977010 instance=ExtResource("8_kmp6s")]
position = Vector2(115.555534, -17.777786)

[node name="Sprite2D6" parent="Sprite2D5/Sprite2D6" unique_id=500908807 instance=ExtResource("8_kmp6s")]
position = Vector2(311.11108, 15.555565)

[node name="Sprite2D6" parent="Sprite2D5/Sprite2D6/Sprite2D6" unique_id=729576219 instance=ExtResource("8_kmp6s")]
position = Vector2(311.11108, 15.555565)

[node name="Sprite2D6" parent="." unique_id=1844440651 instance=ExtResource("9_36t35")]
position = Vector2(122.22221, -70)

[node name="Sprite2D7" parent="." unique_id=2001754725 instance=ExtResource("9_36t35")]
position = Vector2(164.44444, -69.99998)
scale = Vector2(1, 0.99999976)

[node name="Sprite2D8" parent="." unique_id=417009517 instance=ExtResource("8_kmp6s")]
position = Vector2(586.6666, -49.999996)
scale = Vector2(1, 0.9999998)

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1096679433]
scale = Vector2(1, 0.99999994)
tile_map_data = PackedByteArray("AAAjAP//AAABAAEAAAAkAP//AAACAAEAAAAkAP7/AAACAAEAAAAlAP7/AAABAAEAAAAjAP7/AAABAAEAAAAmAP7/AAACAAEAAAAnAP7/AAABAAEAAAAoAP7/AAACAAEAAAApAP7/AAABAAEAAAAqAP7/AAACAAEAAAApAP//AAABAAEAAAAqAP//AAACAAEAAAAnAP//AAABAAEAAAAoAP//AAACAAEAAAAlAP//AAABAAEAAAAmAP//AAACAAEAAAAlAAAAAAABAAEAAAAmAAAAAAACAAEAAAAjAAAAAAABAAEAAAAkAAAAAAACAAEAAAAnAAAAAAABAAEAAAAoAAAAAAACAAEAAAApAAAAAAABAAEAAAAqAAAAAAACAAEAAAApAAEAAAABAAEAAAAqAAEAAAACAAEAAAApAAIAAAABAAEAAAAqAAIAAAACAAEAAAAnAAIAAAABAAEAAAAoAAIAAAACAAEAAAAnAAMAAAABAAEAAAAoAAMAAAACAAEAAAApAAMAAAABAAEAAAAqAAMAAAACAAEAAAAlAAMAAAABAAEAAAAmAAMAAAACAAEAAAAlAAIAAAABAAEAAAAmAAIAAAACAAEAAAAlAAEAAAABAAEAAAAmAAEAAAACAAEAAAAnAAEAAAABAAEAAAAoAAEAAAACAAEAAAAjAAEAAAABAAEAAAAkAAEAAAACAAEAAAAjAAIAAAABAAEAAAAkAAIAAAACAAEAAAAjAAMAAAABAAEAAAAkAAMAAAABAAEAAAAmAAQAAAABAAEAAAAmAAUAAAACAAEAAAAnAAQAAAACAAEAAAAnAAUAAAABAAEAAAAoAAQAAAABAAEAAAAoAAUAAAACAAEAAAApAAQAAAABAAEAAAApAAUAAAABAAIAAAAqAAQAAAACAAEAAAAqAAUAAAABAAEAAAAsAAUAAAABAAEAAAAtAAUAAAACAAEAAAArAAUAAAACAAEAAAAuAAUAAAABAAEAAAAvAAUAAAABAAEAAAAwAAUAAAACAAEAAAAlAAUAAAABAAEAAAAjAAUAAAABAAEAAAAkAAUAAAABAAEAAAAhAAUAAAABAAEAAAAiAAUAAAABAAEAAAAhAAQAAAABAAEAAAAiAAQAAAABAAEAAAAhAAMAAAABAAEAAAAiAAMAAAACAAEAAAAhAAIAAAABAAEAAAAiAAIAAAACAAEAAAAgAAMAAAABAAEAAAAgAAIAAAABAAEAAAAgAAEAAAABAAEAAAAhAAEAAAABAAEAAAAgAAAAAAABAAEAAAAhAAAAAAABAAEAAAAgAP//AAABAAEAAAAhAP//AAABAAEAAAAgAP7/AAABAAEAAAAhAP7/AAABAAEAAAAiAP7/AAACAAEAAAAfAP//AAABAAEAAAAfAAAAAAABAAEAAAAeAAAAAAABAAEAAAAdAAEAAAABAAEAAAAeAAEAAAABAAEAAAAfAAEAAAABAAEAAAAcAAIAAAABAAEAAAAdAAIAAAABAAEAAAAcAAMAAAABAAEAAAAdAAMAAAABAAEAAAAcAAQAAAABAAEAAAAdAAQAAAABAAEAAAAbAAMAAAACAAEAAAAaAAQAAAABAAEAAAAbAAQAAAACAAEAAAAaAAUAAAABAAEAAAAbAAUAAAABAAEAAAAcAAUAAAABAAEAAAAdAAUAAAABAAEAAAAeAAUAAAABAAEAAAAfAAUAAAABAAEAAAAgAAUAAAABAAEAAAAlAAQAAAABAAEAAAAjAAQAAAABAAEAAAAkAAQAAAABAAEAAAAgAAQAAAABAAEAAAAfAAMAAAABAAEAAAAfAAIAAAABAAEAAAAeAAMAAAABAAEAAAAfAAQAAAABAAEAAAAeAAQAAAABAAEAAAAiAAAAAAABAAEAAAAiAP//AAABAAEAAAAiAAEAAAABAAEAAAAZAAUAAAABAAEAAAAYAAUAAAABAAEAAAAXAAUAAAABAAEAAAAWAAUAAAABAAEAAAAWAAQAAAABAAEAAAAVAAQAAAABAAEAAAAVAAUAAAABAAEAAAAVAAMAAAABAAEAAAASAAMAAAABAAEAAAARAAMAAAABAAEAAAARAAQAAAABAAEAAAARAAUAAAABAAEAAAASAAUAAAABAAEAAAASAAQAAAABAAEAAAAOAAMAAAABAAEAAAANAAMAAAABAAEAAAAMAAMAAAABAAEAAAAKAP7/AAABAAEAAAAJAP7/AAABAAEAAAAIAP7/AAABAAEAAAAHAP7/AAABAAEAAAAJAAMAAAABAAEAAAAIAAMAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAIAAUAAAABAAEAAAAJAAUAAAABAAEAAAAJAAQAAAABAAEAAAAIAAQAAAABAAEAAAAGAAQAAAABAAEAAAAFAAQAAAABAAEAAAAEAAQAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAAEAAUAAAABAAEAAAAFAAUAAAABAAEAAAAGAAUAAAABAAEAAAACAAUAAAABAAEAAAABAAUAAAABAAEAAAAAAAUAAAABAAEAAAD//wUAAAABAAEAAAD+/wUAAAABAAEAAAD9/wUAAAABAAEAAAD8/wUAAAABAAEAAAD7/wUAAAABAAEAAAD6/wUAAAABAAEAAAD5/wUAAAABAAEAAAD4/wUAAAABAAEAAAD3/wUAAAABAAEAAAD2/wUAAAABAAEAAAD7/wEAAAABAAEAAAD8/wEAAAABAAEAAAD9/wEAAAABAAEAAAD+/wEAAAABAAEAAAAxAAUAAAABAAEAAAAyAAUAAAABAAEAAAAyAAQAAAABAAEAAAAxAAQAAAABAAEAAAAxAAMAAAABAAEAAAAxAAIAAAABAAEAAAAyAAIAAAABAAEAAAAyAAEAAAABAAEAAAAyAAAAAAABAAEAAAAyAP//AAABAAEAAAAxAP//AAABAAEAAAAxAP7/AAABAAEAAAAxAP3/AAABAAEAAAAxAPz/AAABAAEAAAAxAPv/AAABAAEAAAAxAPr/AAABAAEAAAAxAPn/AAABAAEAAAAxAPj/AAABAAEAAAAwAPj/AAABAAEAAAAvAPj/AAABAAEAAAAuAPj/AAABAAEAAAAtAPj/AAABAAEAAAAsAPj/AAABAAEAAAAsAPn/AAABAAEAAAAtAPn/AAABAAEAAAAuAPn/AAABAAEAAAAyAPn/AAABAAEAAAAwAPn/AAABAAEAAAAvAPn/AAABAAEAAAAyAPj/AAABAAEAAAAyAPr/AAABAAEAAAAyAPv/AAABAAEAAAAyAPz/AAABAAEAAAAyAP3/AAABAAEAAAAyAP7/AAABAAEAAAAyAAMAAAABAAEAAAAxAAAAAAABAAEAAAAxAAEAAAABAAEAAAAeAAIAAAABAAEAAAA=")
tile_set = SubResource("TileSet_4l1eq")

[node name="Ground" type="TileMapLayer" parent="." unique_id=1397525022]
tile_map_data = PackedByteArray("AAD2/wUAAAACAAYAAAD3/wUAAAADAAYAAAD4/wUAAAACAAYAAAD5/wUAAAADAAYAAAD6/wUAAAACAAYAAAD7/wUAAAADAAYAAAD8/wUAAAACAAYAAAD9/wUAAAADAAYAAAD+/wUAAAACAAYAAAD//wUAAAADAAYAAAAAAAUAAAACAAYAAAABAAUAAAADAAYAAAACAAUAAAACAAYAAAADAAUAAAADAAYAAAAEAAUAAAACAAYAAAAFAAUAAAADAAYAAAAIAAUAAAACAAYAAAAJAAUAAAADAAYAAAAGAAUAAAACAAYAAAAHAAUAAAADAAYAAAD4/wQAAgACAAYAAAD5/wQAAgACAAYAAAD2/wQAAgACAAYAAAD3/wQAAgACAAYAAAD6/wQAAgACAAYAAAD7/wQAAgACAAYAAAD8/wQAAgACAAYAAAD9/wQAAgACAAYAAAD+/wQAAgACAAYAAAD//wQAAgACAAYAAAAAAAQAAgACAAYAAAABAAQAAgACAAYAAAACAAQAAgACAAYAAAAIAAQAAAACAAYAAAAJAAQAAAACAAYAAAAGAAQAAAACAAYAAAAHAAQAAAACAAYAAAAEAAQAAAACAAYAAAAFAAQAAAACAAYAAAADAAQAAAACAAYAAAD7/wAAAgACAAYAAAD8/wAAAgACAAYAAAD9/wAAAgACAAYAAAD+/wAAAgACAAYAAAD+/wEAAAACAAYAAAD9/wEAAAACAAYAAAD8/wEAAAACAAYAAAD7/wEAAAACAAYAAAADAAMAAgACAAYAAAAGAAMAAgACAAYAAAAFAAMAAgACAAYAAAAEAAMAAgACAAYAAAAHAAMAAAACAAYAAAAHAAIAAgACAAYAAAAIAAIAAgACAAYAAAAJAAIAAgACAAYAAAAJAAMAAAACAAYAAAAIAAMAAAACAAYAAAAMAAIAAgACAAYAAAANAAIAAgACAAYAAAAOAAIAAgACAAYAAAAOAAMAAAACAAYAAAANAAMAAAACAAYAAAAMAAMAAAACAAYAAAARAAIAAgACAAYAAAASAAIAAgACAAYAAAARAAMAAAACAAYAAAARAAQAAAACAAYAAAARAAUAAAACAAYAAAASAAUAAAACAAYAAAASAAQAAAACAAYAAAASAAMAAAACAAYAAAAHAP3/AgACAAYAAAAIAP3/AgACAAYAAAAJAP3/AgACAAYAAAAKAP3/AgACAAYAAAAKAP7/AAACAAYAAAAJAP7/AAACAAYAAAAIAP7/AAACAAYAAAAHAP7/AAACAAYAAAAVAAIAAgACAAYAAAAWAAMAAgACAAYAAAAXAAQAAgACAAYAAAAYAAQAAgACAAYAAAAZAAQAAgACAAYAAAAVAAMAAAACAAYAAAAVAAQAAAACAAYAAAAVAAUAAAACAAYAAAAWAAUAAAACAAYAAAAWAAQAAAACAAYAAAAXAAUAAAACAAYAAAAYAAUAAAACAAYAAAAZAAUAAAACAAYAAAAaAAMAAgACAAYAAAAbAAIAAgACAAYAAAAcAAEAAgACAAYAAAAdAAAAAgACAAYAAAAeAP//AgACAAYAAAAfAP7/AgACAAYAAAAgAP3/AgACAAYAAAAhAP3/AgACAAYAAAAiAP3/AgACAAYAAAAaAAUAAAACAAYAAAAbAAUAAAACAAYAAAAcAAUAAAACAAYAAAAdAAUAAAACAAYAAAAeAAUAAAACAAYAAAAfAAUAAAACAAYAAAAgAAUAAAACAAYAAAAhAAUAAAACAAYAAAAiAAUAAAACAAYAAAAiAAQAAAACAAYAAAAiAAMAAAACAAYAAAAiAAIAAAACAAYAAAAiAAEAAAACAAYAAAAiAAAAAAACAAYAAAAiAP//AAACAAYAAAAiAP7/AAACAAYAAAAhAP7/AAACAAYAAAAgAP7/AAACAAYAAAAgAP//AAACAAYAAAAhAP//AAACAAYAAAAfAP//AAACAAYAAAAfAAAAAAACAAEAAAAgAAAAAAADAAEAAAAhAAAAAAAEAAEAAAAhAAEAAAAEAAIAAAAhAAIAAAAEAAMAAAAhAAMAAAAEAAQAAAAgAAQAAAACAAYAAAAgAAMAAAADAAQAAAAgAAIAAAADAAMAAAAgAAEAAAADAAIAAAAhAAQAAAACAAYAAAAdAAEAAAACAAYAAAAdAAIAAAACAAYAAAAdAAMAAAACAAYAAAAdAAQAAAACAAYAAAAeAAAAAAABAAEAAAAeAAEAAAABAAIAAAAeAAIAAAABAAMAAAAeAAMAAAABAAQAAAAeAAQAAAACAAYAAAAfAAEAAAACAAIAAAAfAAIAAAACAAMAAAAfAAMAAAACAAQAAAAfAAQAAAACAAYAAAAcAAIAAAACAAYAAAAcAAMAAAACAAYAAAAcAAQAAAACAAYAAAAbAAQAAAACAAYAAAAbAAMAAAACAAYAAAAaAAQAAAACAAYAAAAjAP3/AgACAAYAAAAkAP3/AgACAAYAAAAlAP3/AgACAAYAAAAmAP3/AgACAAYAAAAnAP3/AgACAAYAAAAoAP3/AgACAAYAAAApAP3/AgACAAYAAAAqAP3/AgACAAYAAAAjAAQAAAACAAYAAAAkAAQAAAACAAYAAAAlAAQAAAACAAYAAAAmAAQAAgACAAYAAAAnAAQAAgACAAYAAAAoAAQAAgACAAYAAAApAAQAAgACAAYAAAAqAAQAAgACAAYAAAArAAQAAgACAAYAAAAsAAQAAgACAAYAAAAtAAQAAgACAAYAAAAuAAQAAgACAAYAAAAvAAQAAgACAAYAAAAwAAQAAgACAAYAAAAjAAUAAAACAAYAAAAkAAUAAAACAAYAAAAlAAUAAAACAAYAAAAmAAUAAAACAAYAAAAnAAUAAAACAAYAAAAoAAUAAAACAAYAAAApAAUAAAACAAYAAAAqAAUAAAACAAYAAAArAAUAAAACAAYAAAAsAAUAAAACAAYAAAAtAAUAAAACAAYAAAAuAAUAAAACAAYAAAAvAAUAAAACAAYAAAAwAAUAAAACAAYAAAAjAP7/AAACAAYAAAAkAP7/AAACAAYAAAAlAP7/AAACAAYAAAAmAP7/AAACAAYAAAAnAP7/AAACAAYAAAAoAP7/AAACAAYAAAApAP7/AAACAAYAAAAqAP7/AAACAAYAAAAjAAMAAAACAAYAAAAkAAMAAAACAAYAAAAlAAMAAgACAAYAAAAkAAIAAgACAAYAAAAjAAIAAgACAAYAAAAxAAUAAAACAAYAAAAyAAUAAAACAAYAAAAyAAQAAAACAAYAAAAyAAMAAAACAAYAAAAyAAIAAAACAAYAAAAyAAEAAAACAAYAAAAyAAAAAAACAAYAAAAyAP//AAACAAYAAAAyAP7/AAACAAYAAAAyAP3/AAACAAYAAAAyAPz/AAACAAYAAAAyAPv/AAACAAYAAAAyAPr/AAACAAYAAAAyAPn/AAACAAYAAAAyAPj/AAACAAYAAAAxAPj/AAACAAYAAAAwAPj/AAACAAYAAAAvAPj/AAACAAYAAAAuAPj/AAACAAYAAAAtAPj/AAACAAYAAAAsAPj/AAACAAYAAAAsAPn/AAACAAYAAAAtAPn/AAACAAYAAAAuAPn/AAACAAYAAAAvAPn/AAACAAYAAAAwAPn/AAACAAYAAAAxAPn/AAACAAYAAAAxAPr/AAACAAYAAAAxAPv/AAACAAYAAAAxAP//AAACAAYAAAAxAAAAAAACAAYAAAAxAAEAAAACAAYAAAAxAAIAAAACAAYAAAAxAAMAAAACAAYAAAAxAAQAAAACAAYAAAAxAP7/AAACAAYAAAAxAP3/AAACAAYAAAAxAPz/AAACAAYAAAA=")
tile_set = SubResource("TileSet_ulhx2")

[node name="PuzzleWall" type="StaticBody2D" parent="." unique_id=74123296]
scale = Vector2(1, 0.9999999)

[node name="Sprite2D" type="Sprite2D" parent="PuzzleWall" unique_id=205581428]
position = Vector2(679.99994, 25.55558)
scale = Vector2(1, 1.9999999)
texture = ExtResource("19_4l1eq")
region_enabled = true
region_rect = Rect2(75.02193, 96.86118, 14.011261, 46.359886)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuzzleWall" unique_id=1319620622]
position = Vector2(679.99994, 25.55556)
scale = Vector2(1, 0.99999976)
shape = SubResource("RectangleShape2D_elyim")
debug_color = Color(0.5157609, 0.43417975, 0, 0.41960785)

[node name="InvisibleWall" type="StaticBody2D" parent="." unique_id=1118435038]
scale = Vector2(1, 0.9999999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleWall" unique_id=1250882305]
position = Vector2(-160.2778, 2.2222443)
scale = Vector2(1, 0.9999999)
shape = SubResource("RectangleShape2D_bf2j0")

[node name="SignPuzzle" type="Area2D" parent="." unique_id=835870262]
scale = Vector2(1, 0.99999994)
script = ExtResource("15_ae1xr")

[node name="Sprite2D" type="Sprite2D" parent="SignPuzzle" unique_id=1633679922]
position = Vector2(748.8888, 54.444458)
scale = Vector2(0.11999177, 0.12832554)
texture = ExtResource("15_ssmlh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SignPuzzle" unique_id=631919262]
position = Vector2(748.8888, 57.22223)
shape = SubResource("CapsuleShape2D_ae1xr")
debug_color = Color(0.4016347, 0.6088211, 3.85046e-07, 0.41960785)

[node name="Player" parent="." unique_id=1370263588 instance=ExtResource("12_8gb1h")]
position = Vector2(-135.55553, 56.666676)
scale = Vector2(0.7, 0.7)

[node name="MusicNode" type="AudioStreamPlayer2D" parent="Player" unique_id=1321850157]
position = Vector2(193.65074, -80.95241)
scale = Vector2(1.4285713, 1.4285713)
stream = ExtResource("13_vhkrb")
volume_db = -10.0
autoplay = true

[node name="mob" parent="." unique_id=1431857032 instance=ExtResource("14_hogks")]
position = Vector2(204.44443, 30.000008)

[node name="mob3" parent="." unique_id=850773684 instance=ExtResource("14_hogks")]
position = Vector2(624.4444, 61.11112)
scale = Vector2(1.4, 1.4)

[node name="mob2" parent="." unique_id=1255241790 instance=ExtResource("14_hogks")]
position = Vector2(286.66663, 30.000008)

[node name="mob4" parent="." unique_id=789717957 instance=ExtResource("14_hogks")]
position = Vector2(655.5555, 61.111122)
scale = Vector2(1.4, 1.4)

[node name="DeadZone" type="Area2D" parent="." unique_id=1117355126]
script = ExtResource("15_6yrh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone" unique_id=2037026280]
position = Vector2(256.66675, 103.33335)
scale = Vector2(1, 0.9999997)
shape = SubResource("RectangleShape2D_bim6h")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="DeathSound" type="AudioStreamPlayer2D" parent="." unique_id=993450446]
stream = ExtResource("16_7kurs")
volume_db = -10.0

[node name="Area2D" parent="." unique_id=931215498 instance=ExtResource("17_gdqo4")]
position = Vector2(575.5555, 7.777788)

[node name="CanvasLayer2" type="CanvasLayer" parent="." unique_id=1630825326]

[node name="PuzzleUI" type="Panel" parent="CanvasLayer2" unique_id=494064455]
visible = false
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -124.0
offset_right = 280.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CanvasLayer2/PuzzleUI" unique_id=739006509]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -66.5
offset_right = 173.5
offset_bottom = -17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ae1xr")
theme_override_font_sizes/font_size = 22
text = "Â¿How many slimes did you see 
during all the level?
Press Enter to solve."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswerInput" type="LineEdit" parent="CanvasLayer2/PuzzleUI" unique_id=1215844141]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.25
offset_top = 17.5
offset_right = 66.25
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="body_entered" from="SignPuzzle" to="SignPuzzle" method="_on_body_entered"]
[connection signal="body_entered" from="DeadZone" to="DeadZone" method="_on_body_entered"]
[connection signal="text_submitted" from="CanvasLayer2/PuzzleUI/AnswerInput" to="SignPuzzle" method="_on_answer_input_text_submitted"]
